Scroll animation + "flicker' bug fixed

--- a/SCSS/_slides.scss
+++ b/SCSS/_slides.scss
@@ -65,10 +65,10 @@
 .reveal-text {
     position: absolute;
     width: 100%;
-    height: 100%;
+    height: 150%;
     background: $bgColor;
     left: 0;
-    top: 0;
+    top: -15%;
 }
 
 .cursor {
@@ -77,4 +77,8 @@
     border: 2px solid white;
     border-radius: 50%;
     position: absolute;
+}
+
+.scrollmagic-pin-spacer {
+    position: static !important;
 }
